# f1-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: ergast.rs  historical.rs  lib.rs  livetiming.rs  season.rs  weekend.rs
src/historical/: api_structs.rs  convert.rs  mod.rs
