[package]
name = "f1-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/yvessavoy/f1-rs"
authors = ["Yves"]
description = "Get historical and live Formula 1 (F1) data"
license-file = "LICENSE"
keywords = ["F1", "Formula1", "Racing", "Motorsport"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"