[package]
name = "f1"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/yvessavoy/f1-rs"
authors = ["Yves"]
description = "Get historical and live Formula 1 (F1) data"
license-file = "LICENSE"
keywords = ["F1", "Formula1", "Racing", "Motorsport"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lazy_static = "1.4"
chrono = "0.4"